# tree-to-script

./: .buildinfo  LICENSE  index.html  objects.inv  pyproject.toml
.github/workflows/: ci.yml  documentation.yml  manual-version-bump.yml  release.yml
docs/source/: api.md  index.md  installation.md  license.md
tree_to_script/: main.py
