[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-to-script"
version = "0.1.2"
authors = [
    {name = "vanuan", email = "vanuan+tree-to-script@gmail.com"},
]
description = "A utility for transforming directory tree structures from text into actionable shell commands or executing them directly"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Example main dependency
    # "requests>=2.25.0",
]

[project.optional-dependencies]
# Test dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
# Development dependencies
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/vanuan/tree-to-script"
"Bug Tracker" = "https://github.com/vanuan/tree-to-script/issues"
"Documentation" = "https://vanuan.github.io/tree-to-script"

[tool.setuptools.package-data]
"tree_to_script" = ["py.typed"]

[tool.setuptools]
package-dir = {"" = "."}
license-files = ["LICENSE"]

